--- a/index.html
+++ b/index.html
@@ -551,14 +551,38 @@ Do you want to improve this page? Please <a href="https://github.com/jmini/ascii
 <div class="sect1">
 <h2 id="description"><a class="anchor" href="#description"></a>Description</h2>
 <div class="sectionbody">
-
-</div>
-</div>
-<div class="sect1">
-<h2 id="description-2"><a class="anchor" href="#description-2"></a>Description</h2>
-<div class="sectionbody">
 <div class="paragraph">
 <p>This repository contains some experiments I do with AsciidoctorJ.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>ast-json</p>
+</li>
+</ul>
+</div>
+<div class="sect2">
+<h3 id="ast-json"><a class="anchor" href="#ast-json"></a>ast-json</h3>
+<div class="paragraph">
+<p>This is an attempt to create a JSON output of the AST of the document.
+(see <a href="http://discuss.asciidoctor.org/Asciidoctor-AST-output-td4670.html">this discussion</a> on the mailing list)</p>
+</div>
+<div class="paragraph">
+<p>The main class is <a href="https://github.com/jmini/asciidoctorj-experiments/blob/master/ast-json/src/main/java/ast/json/AstJsonConverter.java">AstJsonConverter</a>.
+It can be registered and used like this:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="CodeRay highlight"><code data-lang="java">org.asciidoctor.Asciidoctor asciidoctor = org.asciidoctor.Asciidoctor.Factory.create();
+asciidoctor.javaConverterRegistry().register(AstJsonConverter.class);
+OptionsBuilder options = OptionsBuilder.options().backend(<span class="string"><span class="delimiter">&quot;</span><span class="content">ast-json</span><span class="delimiter">&quot;</span></span>);
+JSONObject obj = asciidoctor.convert(content, options, JSONObject.class);</code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>I have tried to run it on several examples provided in this folder
+<a href="https://github.com/jmini/asciidoctorj-experiments/blob/master/ast-json/examples">examples</a>.</p>
+</div>
 </div>
 </div>
 </div>
@@ -584,7 +608,7 @@ Do you want to improve this page? Please <a href="https://github.com/jmini/ascii
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2016-06-04 19:29:09 CEST
+Last updated 2016-06-08 07:50:49 CEST
 </div>
 </div>
 </body>
